# C3D-parser

./: .gitignore  LICENSE  README.md  application.py  c3d_parser.py  c3d_patch.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: create-release.yaml  on-demand-deployment.yaml
marker_maps/: Sydney.json
res/: prepare_release.py
res/graphics/: splash.qrc
res/macos/: ABI.icns  create_installer.sh
res/pyinstaller/: create_application.py
res/pyinstaller/hooks/: hook-articulated_ssm_both_sides.py  hook-opensim_model_creator.py  hook-pydicom.encoders.py
res/win/: create_installer.py  nsis.nsi.template
src/c3d_parser/: __init__.py  application.py  splash_rc.py  splashscreen.py
src/c3d_parser/core/: c3d_parser.py  c3d_patch.py  external_loads_template.xml  osim.py  utils.py
src/c3d_parser/core/marker_maps/: AUC.json  FMC.json  MH.json  QCMAS.json  RBWH.json  RCH.json  Sydney.json  Template.json
src/c3d_parser/core/osim_resources/: external_loads_template.xml  ik_task_set.xml
src/c3d_parser/mesh/: shape_model_hemi_mean_Combined_pelvis.stl  shape_model_hemi_mean_Left_femur.stl  shape_model_hemi_mean_Left_tibfib.stl  shape_model_hemi_mean_Right_femur_mirrored.stl  shape_model_hemi_mean_Right_tibfib_mirrored.stl
src/c3d_parser/settings/: general.py  logging.py
src/c3d_parser/settings/marker_maps/: AUC.json  FMC.json  MH.json  QCMAS.json  RBWH.json  RCH.json
src/c3d_parser/view/: main_window.py  utils.py  widgets.py
src/c3d_parser/view/dialogs/: about_dialog.py  delete_marker_set_dialog.py  marker_set_dialog.py  marker_set_import_dialog.py  options_dialog.py  subject_info_dialog.py
src/c3d_parser/view/qt/: delete_marker_set_dialog.ui  main_window.ui  marker_set_dialog.ui  marker_set_import_dialog.ui  options_dialog.ui  resources.qrc  subject_info_dialog.ui
src/c3d_parser/view/ui/: resources_rc.py  ui_delete_marker_set_dialog.py  ui_main_window.py  ui_marker_set_dialog.py  ui_marker_set_import_dialog.py  (+2 more)
tests/: test_parser.py
tests/data/: Static01.c3d  Walk01-01.c3d
tests/data/AUC/: CB_Static0001.c3d
tests/data/FMC/: MH0222_BP01.c3d  MH0222_BP08.c3d
tests/data/MH/: MH_Cal 01.c3d
tests/data/QCMAS/: QCMAS.static.c3d
tests/data/RBWH/: Max Cal 01.c3d
tests/data/RCH/: RCH.01.c3d  RCH.08.c3d
tests/data/Sydney/: S4-AMGait03.c3d  S4-AMGait04.c3d  S4-AMGait05.c3d  S4-AMGait06.c3d  S4-AMGait07.c3d
view/: main_window.py
view/qt/: main_window.ui
view/ui/: ui_main_window.py
(+7 files in other folders)
