[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[options]
package_dir = {'' = 'src'}

[project]
name = "c3d-parser"
description = "C3D parser for gait data harmonisation."
authors = [{name = "Timothy Salemink", email = "tim.nicolas@outlook.com" },
           {name = "Sally Jack", email = "sallyjaack@gmail.com"}]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
dynamic = ["version", "dependencies"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
c3d_parser = ["settings/marker_maps/**/*", "core/osim_resources/**/*"]

[tool.setuptools.dynamic]
version = {attr = "c3d_parser.__version__"}
dependencies = {file = ["requirements.txt"]}

[project.urls]
Repository = "https://github.com/tsalemink/C3D-parser"

[project.scripts]
c3d_parser = "c3d_parser.application:main"
